--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <div class="card-reveal">
                           <span class="card-title reveal-title">Image Authentication Using Steganography<i class="material-icons right">close</i></span>
                           <a href="#" class="card-subtitle"></a>
-                          <p>The project is about creating a message digest of some information and then hiding it in an image using steganography.</p>
+                          <p>The project is about creating a message digest for some information and then hiding it in an image using steganography.</p>
                         </div>
                       </div>
                     </div>
